<resources>
    <string name="app_name" translatable="false">YourTube</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>
    <!-- Auth -->
    <string name="login_button_text">Login with Google</string>
    <string name="logout_success">Logged out successfully</string>
    <string name="logout_fail">Log out failed</string>
    <string name="authentication_error">Authentication process encountered an error</string>
    <!-- Main Activity -->
    <string name="bottom_nav_videos">Videos</string>
    <string name="bottom_nav_subscriptions">Subscriptions</string>
    <string name="bottom_nav_categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="quota_exceeded">YouTube API Quota Exceeded. \nCome back tomorrow for more!</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="missing_youtube_authorization">YourTube requires access to your YouTube personal
        data in order to retrieve the list of channels you are subscribed to. Please log in again,
        and make sure to authorize YourTube to access your YouTube account information</string>
    <!-- Videos -->
    <string name="thumbnail_img_placeholder">Thumbnail</string>
    <string name="next_day">Next day</string>
    <string name="previous_day">Previous day</string>
    <string name="current_date">Current date</string>
    <string name="category_filter">Category filter</string>
    <string name="remove_filter">Remove filer</string>
    <!-- Subscriptions -->
    <string name="subscribed_since">Subscribed since %1$s</string>
    <!-- Categories -->
    <string name="new_category_dialog_title">New category</string>
    <string name="new_category_name_field">New category name</string>
    <string name="add_channels_to_the_category">Add channels</string>
    <string name="dialog_new_category_pick_icon">Pick an icon</string>
    <string name="expand_list_button">Expand list button</string>
    <string name="category_basketball" translatable="false">Basketball</string>
    <string name="category_car" translatable="false">Car</string>
    <string name="category_travel" translatable="false">Travel</string>
    <string name="category_videogame" translatable="false">Videogame</string>
    <string name="category_computer" translatable="false">Computer</string>
    <string name="category_podcast" translatable="false">Podcast</string>
    <string name="category_pet">Pet</string>
    <string name="category_finance">Finance</string>
    <string name="category_food">Food</string>
    <string name="category_health">Health</string>
    <string name="category_school">School</string>
    <string name="category_shopping">Shopping</string>
    <string name="create">Create</string>
    <string name="create_new_category">Create new category</string>
    <string name="chosen_category_icon">Chosen category icon</string>
    <string name="category_icon">Category icon</string>
    <string name="options">Options</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="category">Category</string>
    <string name="edit">Edit</string>
    <string name="category_deleted">Category %1$s deleted</string>
    <string name="category_created">Category %1$s created</string>
    <string name="category_modified">Category %1$s modified</string>
    <string name="channel_not_found">Channel not found</string>
    <string name="category_not_found">Category not found</string>
    <string name="new_category_fail_no_name">You need to specify a name for the category</string>
    <string name="new_category_fail_no_icon">You need to pick an icon</string>
    <string name="new_category_fail_category_exists">This category already exists</string>
    <string name="title_new_category">New category</string>
    <string name="title_edit_category">Edit %1$s</string>
    <!-- Video Player -->
    <string name="like_button">Like button</string>
    <string name="dislike_button">Dislike button</string>
    <string name="description">Description</string>
    <string name="comments">Comments</string>
    <string name="number_views">%1$s Views</string>
    <!-- Settings -->
    <string name="settings_category_ui">Display</string>
    <string name="setting_backup_category">Backup</string>
    <string name="setting_theme_title">Theme</string>
    <string name="setting_language_title">Language</string>
    <string name="settings_category_account">Account</string>
    <string name="delete_account">Delete account</string>
    <string name="backup_categories">Backup categories</string>
    <string name="backup_import_categories">Import categories</string>
    <string name="backup_import_categories_failed">Import failed</string>
    <string name="backup_import_categories_success">Categories imported successfully</string>
    <string name="backup_failed">Backup failed</string>
    <string name="backup_no_data">No data to backup</string>
    <string name="backup_done">Backup completed</string>
    <string name="no_backup_found">No backup found</string>
    <string name="last_backup_date">Last backup: %1$s</string>
    <string name="dialog_import_categories_title">Import categories from backup</string>
    <string name="dialog_import_categories_warning">By proceeding, you will lose all your locally-stored Categories.</string>
    <string name="dialog_backup_categories_warning">By proceeding, you will replace the current cloud backup with a new one.</string>
    <string name="dialog_delete_account_warning">By proceeding, you will delete your account, your local data and cloud backup.</string>
    <string name="portrait_fullscreen">Portrait fullscreen</string>
</resources>