<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp">

    <GridLayout
        android:id="@+id/category_select_icon_grid"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_basketball"
            android:tag="icon_category_basketball"
            android:contentDescription="@string/category_basketball" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_car"
            android:tag="icon_category_car"
            android:contentDescription="@string/category_car" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_travel"
            android:tag="icon_category_travel"
            android:contentDescription="@string/category_travel" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_videogame"
            android:tag="icon_category_videogame"
            android:contentDescription="@string/category_videogame" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_computer"
            android:tag="icon_category_computer"
            android:contentDescription="@string/category_computer" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_podcast"
            android:tag="icon_category_podcast"
            android:contentDescription="@string/category_podcast" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_pet"
            android:tag="icon_category_pet"
            android:contentDescription="@string/category_pet" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_finance"
            android:tag="icon_category_finance"
            android:contentDescription="@string/category_finance" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_food"
            android:tag="icon_category_food"
            android:contentDescription="@string/category_food" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_health"
            android:tag="icon_category_health"
            android:contentDescription="@string/category_health" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_school"
            android:tag="icon_category_school"
            android:contentDescription="@string/category_school" />

        <ImageView
            android:layout_width="@dimen/category_icon"
            android:layout_height="@dimen/category_icon"
            android:layout_margin="@dimen/category_icon_margin"
            android:src="@drawable/icon_category_shopping"
            android:tag="icon_category_shopping"
            android:contentDescription="@string/category_shopping" />



    </GridLayout>

</FrameLayout>