<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_editor_name"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_category_name_field"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/category_editor_subscriptions_list_expand"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_channels_to_the_category"
        app:icon="@drawable/icon_subscriptions"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/category_editor_name"
        app:layout_constraintStart_toStartOf="@+id/category_editor_name" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category_editor_subscriptions_chipgroup"
        app:layout_constraintTop_toBottomOf="@+id/category_editor_subscriptions_list_expand" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/category_editor_icons_list_expand"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_new_category_pick_icon"
        app:icon="@drawable/icon_categories"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/category_editor_subscriptions_chipgroup"
        app:layout_constraintStart_toStartOf="@+id/category_editor_name" />

    <ImageView
        android:layout_width="@dimen/category_icon_preview"
        android:layout_height="@dimen/category_icon_preview"
        android:id="@+id/category_editor_icons_preview"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/category_editor_icons_list_expand"
        app:layout_constraintTop_toTopOf="@+id/category_editor_icons_list_expand"
        app:layout_constraintBottom_toBottomOf="@+id/category_editor_icons_list_expand"
        android:contentDescription="@string/chosen_category_icon" />

    <Button
        android:id="@+id/category_editor_action_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/confirm"
        android:text="@string/confirm"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>