<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewCategoryFragment"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_category_name"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_category_name_field"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:textSize="18sp"
            />

    </com.google.android.material.textfield.TextInputLayout>
<!--
    <EditText
        android:id="@+id/new_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/new_category_name_field"
        android:inputType="textNoSuggestions"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/new_category_subscriptions_expand_container"
        app:layout_constraintTop_toBottomOf="@+id/new_category_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/add_channels_to_the_category"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/new_category_subscriptions_list_expand"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/expand_list_button"
            android:src="@drawable/icon_expand"
            app:tint="?attr/colorAccent" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_category_subscriptions_list"
        app:layout_constraintTop_toBottomOf="@+id/new_category_subscriptions_expand_container"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/new_category_subscriptions_list"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dialog_new_category_pick_icon"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/add_category_dialog_expand_list_icons"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/expand_list_button"
            android:src="@drawable/icon_expand"
            app:tint="?attr/colorAccent" />

    </LinearLayout>

    <include
        android:id="@+id/dialog_add_category_icon_picker"
        layout="@layout/dialog_add_category_icon_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/new_category_create"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/create_new_category"
        android:text="@string/create"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>